# exec-agent

./: Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs
src/control/: client.rs
src/web/: server.rs
src/web/ui/: index.html
ui/: package-lock.json  package.json  svelte.config.js
ui/src/lib/components/charts/: TimeSeries.svelte  cpu.svelte
ui/src/routes/: +page.svelte
