[package]
name = "exec-agent"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty_env_logger = "0.5.0"
futures-util = "0.3.30"
rust-embed = "8.2.0"
tokio = { version = "1.35.1", features = ["full"]}
tungstenite = "0.21.0"
url = "2.5.0"
warp = "0.3.6"
warp-embed = { git = "https://github.com/informationsea/warp-embed.git" }
log = "0.4.20"
